--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,11 +24,17 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
-iroh = "0.27"
-iroh-blobs = "0.27"
+iroh = "=0.26"
+iroh-blobs = "=0.26"
+redb = "=1.5.2"
 futures-lite = "2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hostname = "0.4"
 uuid = { version = "1", features = ["v4", "serde"] }
+tauri-plugin-dialog = "2"
+tauri-plugin-log = "2"
 
+[target.'cfg(target_os = "android")'.dependencies]
+iroh = { version = "=0.26", default-features = false }
+iroh-blobs = { version = "=0.26", default-features = false }
