--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,8 +24,10 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
+bytes = "1"
 iroh = "=0.26"
 iroh-blobs = "=0.26"
+iroh-io = "0.6"
 redb = "=1.5.2"
 futures-lite = "2"
 tracing = "0.1"
@@ -34,7 +36,11 @@ hostname = "0.4"
 uuid = { version = "1", features = ["v4", "serde"] }
 tauri-plugin-dialog = "2"
 tauri-plugin-log = "2"
+tauri-plugin-fs = "2"
+log = "0.4.28"
+url = "2.5.7"
 
 [target.'cfg(target_os = "android")'.dependencies]
 iroh = { version = "=0.26", default-features = false }
 iroh-blobs = { version = "=0.26", default-features = false }
+tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
