--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,6 @@ log = "0.4.28"
 url = "2.5.7"
 
 [target.'cfg(target_os = "android")'.dependencies]
-iroh = { version = "=0.26", default-features = false }
-iroh-blobs = { version = "=0.26", default-features = false }
+iroh = { version = "=0.26" }
+iroh-blobs = { version = "=0.26" }
 tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
