--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,10 +25,10 @@ serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 bytes = "1"
-iroh = "=0.26"
-iroh-blobs = "=0.26"
-iroh-io = "0.6"
-redb = "=1.5.2"
+iroh = "0.95.1"
+iroh-blobs = "0.97.0"
+iroh-io = "0.6.2"
+redb = "3.1.0"
 futures-lite = "2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -41,6 +41,6 @@ log = "0.4.28"
 url = "2.5.7"
 
 [target.'cfg(target_os = "android")'.dependencies]
-iroh = { version = "=0.26" }
-iroh-blobs = { version = "=0.26" }
+iroh = { version = "0.95.1" }
+iroh-blobs = { version = "0.97.0" }
 tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
