--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,19 +18,24 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+iroh-io = "0.6"
+serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1.40"
+n0-future = "0.1.2"
+
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 bytes = "1"
-iroh = "0.95.1"
-iroh-blobs = "0.97.0"
-iroh-io = "0.6.2"
+# Using latest compatible versions - iroh 0.95+, blobs 0.97+, gossip 0.95+, base 0.95+
+iroh = "0.95"
+iroh-blobs = "0.97"
+iroh-gossip = "0.95"
+iroh-base = "0.95"
 redb = "3.1.0"
-futures-lite = "2"
-tracing = "0.1"
+quic-rpc = "0.19.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 hostname = "0.4"
 uuid = { version = "1", features = ["v4", "serde"] }
@@ -39,8 +44,15 @@ tauri-plugin-log = "2"
 tauri-plugin-fs = "2"
 log = "0.4.28"
 url = "2.5.7"
+data-encoding = "2"
+rand = "0.8"
+base64 = "0.22"
+aes-gcm = "0.10"
+sha2 = "0.10"
 
 [target.'cfg(target_os = "android")'.dependencies]
-iroh = { version = "0.95.1" }
-iroh-blobs = { version = "0.97.0" }
 tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
+
+[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
+tauri-plugin-barcode-scanner = "2"
+
