--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-barcode-scanner": "~2.4.2",
+    "@tauri-apps/plugin-clipboard-manager": "~2.3.2",
     "@tauri-apps/plugin-dialog": "~2.4.2",
     "@tauri-apps/plugin-fs": "~2.4.4",
     "@tauri-apps/plugin-log": "~2.7.1",
     "@tauri-apps/plugin-opener": "^2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.553.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
