--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -49,10 +49,10 @@ rand = "0.8"
 base64 = "0.22"
 aes-gcm = "0.10"
 sha2 = "0.10"
+tauri-plugin-clipboard-manager = "2"
 
 [target.'cfg(target_os = "android")'.dependencies]
 tauri-plugin-android-fs = { git = "https://github.com/aiueo13/tauri-plugin-android-fs", branch = "main" }
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
 tauri-plugin-barcode-scanner = "2"
-
